# git_info_llama

./: Cargo.toml  example.db  example.db-journal
src/: main.rs
